cmake_minimum_required(VERSION 3.6)

add_subdirectory(chap2_LinkedLists)
add_subdirectory(chap3_StacksAndQueues)
add_subdirectory(chap4_TreesAndGraphs)
add_subdirectory(chap5_BitManipulation)
add_subdirectory(chap6_MathAndLogicPuzzles)
add_subdirectory(chap7_ObjectOrientedDesign)
add_subdirectory(chap8_RecursionAndDynamicProgramming)
add_subdirectory(chap10_SortingAndSearching)
add_subdirectory(chap12_CandC++)
